<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:background="#fffffd12">


     <TextView android:text="@string/welcome"
        android:textColor="@color/red"
        android:paddingTop="32dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textSize="@dimen/abc_text_size_menu_material" />


    <Space
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:id="@+id/add_button"
        android:textColor="@color/navy"
        android:layout_gravity="center_horizontal"
        android:onClick="addComic"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/view_countdown_text"
        android:id="@+id/view_button"
        android:textColor="@color/navy"
        android:layout_gravity="center_horizontal"
        android:onClick="viewCountdown"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button_text"
            android:id="@+id/edit_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_button_text"
            android:id="@+id/removeButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>

